fixed wrong padding on registration form

--- a/src/app/features/authorization/components/sign-up/sign-up.component.scss
+++ b/src/app/features/authorization/components/sign-up/sign-up.component.scss
@@ -30,10 +30,6 @@
   padding: 8px 148px;
 }
 
-.registration-form {
-  padding-bottom: 32px;
-}
-
 .additional-question,
 .additional-question__link {
   font-size: 14px;
